--- a/sla-main/sla-main/style.css
+++ b/sla-main/sla-main/style.css
@@ -1,83 +1,31 @@
-/* --- Variáveis CSS --- */
-:root {
-    --primary-bg-color: bisque;
-    --footer-bg-color: black;
-    --footer-text-color: white;
-    
-    --card-front-color: #f0f8ff;
-    --text-color: #333;
-    --card-transition-duration: 300ms;
-    --card-border-radius: 0.6rem;
-    --card-padding: 0.5rem;
-    --card-margin: 0.6rem;
-}
-
-/* --- Estilos Gerais --- */
 body {
-    background-color: var(--primary-bg-color);
+    background-color: bisque;
     font-family: 'Bai Jamjuree', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
 }
 
-/* --- Rodapé --- */
+/* Estiliza a tag <footer>, que representa o rodapé da página */
 footer {
-    background-color: var(--footer-bg-color);
-    color: var(--footer-text-color);
+    /* Cor de fundo preta */
+    background-color: black;
+    /* Cor do texto branca */
+    color: white;
+    /* Define a posição do elemento como fixa em relação à viewport.
+       Isso faz com que ele não saia do lugar ao rolar a página. */
     position: fixed;
+    /* Alinha o rodapé à parte inferior da tela (0 pixels do fundo) */
     bottom: 0;
+    /* Garante que o rodapé ocupe 100% da largura da tela */
     width: 100%;
-    height: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /* Define a altura do rodapé */
+    height: 2rem; /* Por exemplo, 2 vezes o tamanho da fonte padrão */
 }
 
+/* Estiliza a tag <p> que está dentro da tag <footer> */
 footer p {
+    /* Centraliza o texto horizontalmente */
     text-align: center;
+    /* Define o tamanho da fonte. '0.6rem' é menor que o padrão. */
     font-size: 0.6rem;
-    margin: 0;
-}
-
-/* --- Estilos do Cartão --- */
-.cartao:hover .cartao__conteudo {
-    transform: rotateY(180deg);
-}
-
-.cartao__conteudo {
-    background-color: var(--card-front-color);
-    text-align: center;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: transform var(--card-transition-duration) ease-in-out;
-}
-
-.cartao__conteudo h3 {
-    color: var(--text-color);
-    border: 1px solid var(--text-color);
-    text-align: left;
-    padding: var(--card-padding);
-    position: absolute;
-    margin: var(--card-margin);
-    border-radius: var(--card-border-radius);
-    font-size: 1vw;
-    backface-visibility: hidden;
-}
-
-.cartao__conteudo__pergunta,
-.cartao__conteudo__resposta {
-    backface-visibility: hidden;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: var(--card-padding);
-    box-sizing: border-box;
-}
-
-.cartao__conteudo__resposta {
-    transform: rotateY(180deg);
+    /* Adiciona uma margem superior para afastar o texto da borda superior do rodapé. */
+    margin-top: 0.5rem;
 }
